--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -43,15 +43,6 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
-    signingConfigs {
-        gertec {
-            storeFile file('..\\..\\Chaves\\Development_GertecDeveloper_CustomerAPP.jks')
-            storePassword 'Development@GertecDeveloper2018'
-            keyAlias 'developmentgertecdeveloper_customerapp'
-            keyPassword 'Development@GertecDeveloper2018'
-        }
-    }
-
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "br.com.prates.flutter_internet_signal_example"
@@ -65,11 +56,10 @@ android {
 
     buildTypes {
         release {
-            //signingConfig signingConfigs.debug
-            signingConfig signingConfigs.gertec
+            signingConfig signingConfigs.debug
         }
         debug {
-            signingConfig signingConfigs.gertec
+            signingConfig signingConfigs.debug
         }
     }
 }
